# Heterogeneous-Solvers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_AdaptiveCpp.sh  main.cpp
matrixGenerator/: generateMatrix.py  matrix.txt  matrixBlocked.txt
matrixGenerator/datasets/: b_20.txt
src/: main.cpp
src/dataStructures/: RightHandSide.cpp  RightHandSide.hpp  SymmetricMatrix.cpp  SymmetricMatrix.hpp
src/gaussianProcess/: GaussianProcess.cpp  GaussianProcess.hpp
src/kernel/: MatrixMatrixOperations.cpp  MatrixMatrixOperations.hpp  MatrixOperations.cpp  MatrixOperations.hpp  MatrixVectorOperations.cpp  MatrixVectorOperations.hpp  VectorOperations.cpp  VectorOperations.hpp
src/loadBalancer/: LoadBalancer.cpp  LoadBalancer.hpp  PowerLoadBalancer.cpp  PowerLoadBalancer.hpp  RuntimeLoadBalancer.cpp  RuntimeLoadBalancer.hpp  StaticLoadBalancer.cpp  StaticLoadBalancer.hpp  UtilizationLoadBalancer.cpp  UtilizationLoadBalancer.hpp
src/matrixData/: RightHandSide.cpp  RightHandSide.hpp  SymmetricMatrix.cpp  SymmetricMatrix.hpp
src/matrixOperations/: MatrixOperations.cpp  MatrixOperations.hpp
src/metricsTracker/: MetricsTracker.cpp  MetricsTracker.hpp
src/solver/cg/: CG.cpp  CG.hpp
src/solver/cholesky/: Cholesky.cpp  Cholesky.hpp  TriangularSystemSolver.cpp  TriangularSystemSolver.hpp
src/utility/: Configuration.cpp  Configuration.hpp  MatrixGenerator.cpp  MatrixGenerator.hpp  MatrixParser.cpp  MatrixParser.hpp  UtilityFunctions.cpp  UtilityFunctions.hpp
tests/: test.cpp  testMatrixMatrixOperations.cpp  testMatrixOperations.cpp  testMatrixVectorBlock.cpp  testSymmetricMatrix.cpp  testVectorOperations.cpp
